tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__induction_variable_postponable.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 144
expression: postponable
---

                 induction_variable

+--------------------------------------------+
|                   enter:                   |
| {}                                         |
| (MOVE (TEMP _a) (CONST 0))                 |
| {}                                         |
| (JUMP r#loop)                              |
| {(ADD (TEMP _a) (CONST 1))}                |
+--------------------------------------------+
  |
  |
  v
+--------------------------------------------+
|                  r#loop:                   |
| {}                                         |
| (MOVE (TEMP _a) (ADD (TEMP _a) (CONST 1))) |
| {}                                         | ---+
| (CJUMP (GEQ (TEMP _a) (CONST 5)) r#loop)   |    |
| {}                                         | <--+
+--------------------------------------------+
  |
  |
  v
+--------------------------------------------+
|                   exit:                    |
| {}                                         |
+--------------------------------------------+

