tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__induction_variable_regression_anticipated.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 155
expression: anticipated
---

                                   induction_variable_regression


  +----------------------------------------------------------------------------------------------+
  |                                                                                              |
  |                                                +------------------------------------------+  |
  |                                                |                  enter:                  |  |
  |                                                | {}                                       |  |
  |                                                | (MOVE (TEMP _a) (TEMP _ARG0))            |  |
  |                                                | {}                                       |  |
  |                                                | (MOVE (TEMP _b) (CONST 0))               |  |
  |                                                | {}                                       |  |
  |                                                | (JUMP r#while)                           |  |
  |                                                | {}                                       |  |
  |                                                +------------------------------------------+  |
  |                                                  |                                           |
  |                                                  |                                           |
  |                                                  v                                           |
+--------------------------------------------+     +------------------------------------------+  |
|                  r#false:                  |     |                                          |  |
| {(ADD (TEMP _b) (CONST 1))}                |     |                                          |  |
| (EXP (CALL (NAME black_box) (TEMP _b)))    |     |                                          |  |
| {(ADD (TEMP _b) (CONST 1))}                |     |                                          |  |
| (MOVE (TEMP _c) (TEMP _RET0))              |     |                 r#while:                 |  |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                       |  |
| (EXP (CALL (NAME black_box) (TEMP _c)))    |     | (CJUMP (GEQ (TEMP _b) (CONST 3)) r#true) |  |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                       |  |
| (MOVE (TEMP _b) (ADD (TEMP _b) (CONST 1))) |     |                                          |  |
| {}                                         |     |                                          |  |
| (JUMP r#while)                             |     |                                          |  |
| {}                                         | <-- |                                          | <+
+--------------------------------------------+     +------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +------------------------------------------+
                                                   |                 r#true:                  |
                                                   | {}                                       |
                                                   | (RETURN)                                 |
                                                   | {}                                       |
                                                   | (JUMP exit)                              |
                                                   | {}                                       |
                                                   +------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +------------------------------------------+
                                                   |                  exit:                   |
                                                   | {}                                       |
                                                   +------------------------------------------+

