tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__induction_variable_used.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 144
expression: used
---

                 induction_variable

+--------------------------------------------+
|                   enter:                   |
| {}                                         |
| (MOVE (TEMP _a) (CONST 0))                 |
| {}                                         |
| (JUMP r#loop)                              |
| {}                                         |
+--------------------------------------------+
  |
  |
  v
+--------------------------------------------+
|                  r#loop:                   |
| {}                                         |
| (MOVE (TEMP _a) (ADD (TEMP _a) (CONST 1))) |
| {}                                         | ---+
| (CJUMP (GEQ (TEMP _a) (CONST 5)) r#loop)   |    |
| {}                                         | <--+
+--------------------------------------------+
  |
  |
  v
+--------------------------------------------+
|                   exit:                    |
| {}                                         |
+--------------------------------------------+

