tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__loop_invariant_in_cjump_available.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 175
expression: available
---

                                                    loop_invariant_in_cjump


  +--------------------------------------------------------------------------------------------------------------------------+
  |                                                                                                                          |
  |                                                        +--------------------------------------------------------------+  |
  |                                                        |                            enter:                            |  |
  |                                                        | {}                                                           |  |
  |                                                        | (MOVE (TEMP _a) (MEM (CONST 0)))                             |  |
  |                                                        | {(MEM (CONST 0))}                                            |  |
  |                                                        | (MOVE (TEMP _index) (CONST 0))                               |  |
  |                                                        | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |  |
  |                                                        | (JUMP r#while)                                               |  |
  |                                                        | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |  |
  |                                                        +--------------------------------------------------------------+  |
  |                                                          |                                                               |
  |                                                          |                                                               |
  |                                                          v                                                               |
+----------------------------------------------------+     +--------------------------------------------------------------+  |
|                      r#false:                      |     |                                                              |  |
| {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}       |     |                           r#while:                           |  |
| (MOVE (TEMP _index) (ADD (TEMP _index) (CONST 1))) |     | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |  |
| {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}       |     | (CJUMP (GEQ (TEMP _index) (ADD (TEMP _a) (CONST 1))) r#true) |  |
| (JUMP r#while)                                     |     | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |  |
| {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}       | <-- |                                                              | <+
+----------------------------------------------------+     +--------------------------------------------------------------+
                                                             |
                                                             |
                                                             v
                                                           +--------------------------------------------------------------+
                                                           |                           r#true:                            |
                                                           | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |
                                                           | (JUMP exit)                                                  |
                                                           | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |
                                                           +--------------------------------------------------------------+
                                                             |
                                                             |
                                                             v
                                                           +--------------------------------------------------------------+
                                                           |                            exit:                             |
                                                           | {(MEM (CONST 0)), (ADD (TEMP _a) (CONST 1))}                 |
                                                           +--------------------------------------------------------------+

